--- a/documentation/components/ListIngredientComponent.html
+++ b/documentation/components/ListIngredientComponent.html
@@ -566,7 +566,7 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>habilitateIngredient(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank">number</a>)</code>
+<code>habilitateIngredient(id: <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank">String</a>)</code>
                 </td>
             </tr>
 
@@ -599,7 +599,7 @@
                                 <tr>
                                     <td>id</td>
                                     <td>
-                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+                                                <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" target="_blank" >String</a></code>
                                     </td>
 
                                     <td>
@@ -1014,10 +1014,10 @@ export class ListIngredientComponent implements OnInit {
 
   /**
    * Habilita el ingredinte
-   * @param {number} id - id del ingrediente que se abilita.
+   * @param {String} id - id del ingrediente que se abilita.
    * @returns {void}
    */
-  habilitateIngredient(id:number):void {
+  habilitateIngredient(id:String):void {
     this.updating&#x3D;true;
     this.service.getIngredient(id).subscribe((res: any) &#x3D;&gt; {
       this.ingredientSelected &#x3D; { ...res.data };
